--- a/index.html
+++ b/index.html
@@ -46,5 +46,8 @@
         </div>
       </div>
     </div>
+    <footer>
+      <p>Challenge by <a href="https://www.frontendmentor.io/home">FrontEnd Mentor</a>. Code by <a href="#">Sakthi</a> </p>
+    </footer>
   </body>
 </html>
